# bin-obfuscator

./: .gitignore  Cargo.toml  ICEDDOCS.md  README.md  test.bat
.github/workflows/: ci.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs  logger.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: analyzer.rs  branches.rs  compiler.rs  function.rs  instruction.rs  lib.rs  obfuscator.rs
crates/core/src/analyzer/: functions.rs  mod.rs
crates/core/src/passes/: mod.rs  mutation.rs  nop_pass.rs  opaque_branches_pass.rs
crates/core/src/pdb/: loader.rs  mod.rs  parser.rs
crates/core/src/pe/: finalizer.rs  loader.rs  mod.rs  parser.rs  sections.rs
crates/core/src/transforms/: mod.rs
crates/core/src/types/: function.rs  mod.rs
crates/parsers/: Cargo.toml  README.md
crates/parsers/src/: lib.rs
crates/parsers/src/pdb/: mod.rs  parser.rs
crates/parsers/src/pe/: finalizer.rs  mod.rs  parser.rs  sections.rs
src/: lib.rs  main.rs
src/analysis/: function_discovery.rs  mod.rs
src/binary/: mod.rs  pe.rs  section.rs
src/lifter/: ir_builder.rs  mod.rs
src/lowerer/: code_gen.rs  mod.rs
src/passes/: mod.rs
src/pipeline/: mod.rs  orchestrator.rs
src/pipeline/passes/: mod.rs  opaque_branches.rs  substitution.rs
src/types/: basic_block.rs  cfg.rs  function.rs  mod.rs
tests/: cheat.bat  run.bat  rust.bat  seh.bat
