[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common", package = "common" }
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
rand = "0.9.2"
anyhow = "1.0"
instant = "0.1"
goblin = "0.10.0"
symbolic = { version = "12.16.1", features = ["demangle"] }
